Fixed bottom gap

--- a/indexStyle.css
+++ b/indexStyle.css
@@ -50,7 +50,7 @@
 }
 body
 {
-    top: -6px;
+    bottom: 0px;
     position: relative;
     margin: 0px;
     padding: 0px;
